<resources>
    <string name="app_name">Gyumri Theatre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="load">Loading…</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="login">Մուտքանուն</string>
    <string name="password">Գաղտնաբառ</string>
    <string name="name">Անուն</string>
    <string name="surname">Ազգանուն</string>
    <string name="phone">Հեռախոսահամար</string>
    <string name="email">Էլ․ հասցե</string>
    <string name="confirmPassword">Հաստատել գաղտաբառը</string>
    <string name="register">Գրանցվել</string>
    <string name="sign_in">Մուտք</string>
    <string name="title_activity_maps">Map</string>
    <string name="contact_us">Հետադարձ կապ</string>
    <string name="close">Փակել</string>
    <string name="address">Հասցե:</string>
    <string name="address_value">Սայաթ Նովա 4</string>
    <string name="representation">Ներկայացումներ</string>
    <string name="log_in">Մուտք</string>
    <string name="row">Շարք</string>
    <string name="seat">Տեղ</string>
    <string name="price">Գին</string>
    <string name="remove">Ջնջել</string>
    <string name="ticket_reserved">Պատվիրված է</string>
    <string name="ticket_sold">Վաճառված է</string>
    <string name="ticket_selected">Առկա է</string>
    <string name="ticket_avalable">Ընտրված է</string>
    <string name="buy">Գնել</string>
    <string name="log_out">Դուրս գալ</string>
    <string name="gnel">Գնել</string>
    <string name="taregrutyun">Առաջին թատերական ներկայացումը Ալեքսանդրապոլում /Լենինական, Կումայրի,Գյումրի/ տեղի է ունեցել 1865-ի մայիսի 23-ին, թատերասերների ուժերով, Ա. Մելիք-Հայկազյանի օժանդակությամբ. բեմադրվել է Հ. Կարինյանի (Շուշանիկ)-ը: Նույն թվականին ռուս թատերասերները ներկայացրել են Գոգոլի (Ռևիզոր)-ը: 1866-ից կազմակերպվել է թատերական մասնախումբ: 1879-ին առաջին անգամ խաղացվել է Գ. Սունդուկյանի (Պեպո)-ն: 1888-ին իր փոքրիկ խմբով թատերասերների հետ ներկայացումներ է տվել Պ. Ադամյանը: Հետագայում հյուրախաղերով հանդես են եկել նաև անվանի շատ դերասաններ: Շեքսպիրյան դրամատուրգիան առաջին անգամ ներկայացրել է Կ. Գալֆայանը /Համլետ, 1901/: 1917-18թթ-ին ներկայացումներ է տվել Հ. Զարիֆյանը:

Սովետական իշխանության հաստատումից հետո թատերական գործը դրվել է կայուն հիմքերի վրա: 1922-28թթ-ին գործել է Ալեքպոլի Քաղլուսվարի դրամատիկական թատրոնը /ղեկավար` Ա. Արմենյան/: 1928թ-ի նոյեմբերի 1-ին (Խռովություն) ներկայացումով նոր թատերաշրջանն է բացում արդեն պետականացված Լենինականի Ա. Մռավյանի անվան, պետական դրամատիկական թատրոնը, որը հետագայում, թատրոնի 100-ամյակի կապակցությամբ՝ 1965թ. արժանանում է «Աշխատանքային կարմի դրոշի» շքանշանի: /մինչև 1938թ-ը կոչվել է նաև երկրորդ պետթատրոն/: Թատրոնի կազմը հիմնականում բաղկացած էր տեղի Քաղլուսվարի թատրոնի և Մոսկվայի հայկական դրամատիկական ստուդիայի նորավարտ սաներից` Ա. Արաքսյան, Բ. Գաբրիելյան, Ա. Ռշտունի, Ա. Մկրտումյան, Ս. Սուրենյան, Արծ. Հարությունյան, Ա. Երամյան և ուրիշներ: Ռեժիսորներ`Թ. Սարյան, Վ. Աճեմյան, Նկարիչ` Շերիշև: Շուտով այն համալրվեց նոր ուժերով`Ա. Արմենյան, Լ. Զոհրաբյան, Ց.Ամերիկյան, Ե. Դուրյան-Արմենյան, Ա. Ասրյան, Մ. Գավրոշ, Մ. Հայկասար, Գ. Հարությունյան, Հ. Բադալյան Կ. Արծրունյան, Ա.Փաշայան, Ժ. Էլոյան, Ա. Բերոյան: Այստեղ աշխատել են նաև` Լ. Երամյանը, Մ. Ջանանը, Սուրեն քոչարյանը, Դ. Մալյանը, Մ.Կոստանյանը: Բեմադրություններ են արել Ռ. Սիմոնովը, Ս. Խաչատրյանը, Լ. Քալանթարը, Ա. Գուլակյանը, Դ. Անտաձեն, Վ.Փափազյանը, Վ. Վաղարշյանը, Ա. Արմենյանը, Տ. Շամիրխանյանը: Թատրոնի ստեղծագործական կյանքում մեծ է Վ. Աճեմյանի վաստակը: Այդ շրջանում ներկայացումները ժամանակակից ռուս. Հեղափոխական թատրոնի, մասնավորապես Ե. Վախթանգովի և Վ. Մեյերհոլդի ոճով էին բեմադրված, իսկ դասական դրամատուրգիան` Մ. Գորկու (Հատակում), Շիլլերի (Սեր և խարդավանք), Հ. Պարոնյանի (Մեծապատիվ մուրացկաններ), Կ. Գոլդոնի (Հյուրանոցի տիրուհին) գտավ արդիական սուր մեկնաբանություն: ժամանակակից կյանքը պատկերող ներկայացումների կողքին երևան եկան պատմա-հայրենասիրական և պատմա-հեղափոխական ինքնուրույն պիեսների բեմադրություններ, որոնք մնացին թատրոնի տարեգրության էջերում: Վ.Աճեմյանի նոր բեմադրությունները ևս /Շեքսպիրի (Տասներկուերորդ գիշեր), Սուխովո-կոբիլինի (Կրեչինսկու հարսանիքը), Ն.Զարյանի (Արա Գեղեցիկ) 1946/ հաստատուն տեղ գրավեց հայ թատրոնի պատմության մեջ: Թատրոնի ուշագրավ ներկայացումներից են` Է. Ֆաբրիի (Քեռի ռուժեի ժառանգությունը) /ըստ Բալզակի 1955/,Ա. Օստրովսկւ (Անոժիտը) 1956, Վ.Հյուգոյի (Մարի Թյուդոր)-ը 1962 /բոլորի ռեժիսորը Գ. Մկրտչյան/: Սարտրի (Անթաղ մեռելներ)-ը 1971, Դոստոևսկու (Ոճիր և պատիժ)-ը 1973, Ժ. Հարությունյանի (Հարսանիք-73) 1973թ.,/բոլորի ռեժիսորը Ե. Ղազանչյան/: Բ. Բրեխտի (Կուրաժ մայրիկը և նրա զավակները) 1973թ./ռեժ. Ե. Ղազանչյան, Վ. Քոչարյան/: 1977թ.-ին թատրոնի ստեղծագործական կազմի մեջ են եղել ՀՍՍՀ ժող. արտիստներ Ա. Արզումանյանը, Ժ. Թովմասյանը, Ա. Ազնաուրյանը, Ն. Բոխյանը, վաստակավոր արտիստներ` Հ. Ղազազյանը, Ռ. Օդաբաշյանը, Ա. Քոչարյանը, Լ. Աբրահամյանը, Ս. Չոլախյանը, Կ. Սարգսյանը, Վ. Թամրազյանը, Լ. Ալիխանյանը, Վ.Հակոբյանը, գլխավոր ռեժիսոր` Գ. Մկրտչյան:

Լենինականի թատրոնում են իրենց ստեղծագործական մկրտությունը ստացել ԽՍՀՄ ժող. արտիստներ` Մհեր Մկրտչյանը և Վարդուհի Վարդերեսյանը:

Այս ընթացքում թատրոնը համալրվեց երտասարդ կազմով` Ս. Սարգսյան, Ս. Ե. Գրիգորյան, Ա. Փիլիպոսյան, Գ, Մալոյան, Գ.Հովհաննիսյան, Ա. Յանաշյան, Ս. Ղևոնդյան, Ս. Ղուշչյան, Ս. Արղության, Գ. Գրիգորյան, երիտասարդ բեմադրիչ Գարուշ Հարյանցը, Կապանի թատրոնից տեղափոխվեց Խ. Գրիգորյանը… հետագայում կապանից և Արտաշատից եկան Ս.Բաղդասարյանը և Պ. Սուքիասյանը: Այս շրջանում բեմադրվեցին բազում ներկայացումներ, որոնք իրենց բարձր գեղարվեստական արժեքով մնացին թատրոնի պատմության էջերում: Գ. Մկրտչյանի (Ռևեիզոր)-ը և (Տիտոս Անդրոնիկոս)-ը անգնահատելի գոհարներ են, որոնք իրենց ուրույն տեղը գրավեցին հայ թատրոնի տարեգրքում:
1985թ.-ին Խ. Աբրահամյանի մուտքով Մռավյանի անվան թատրոնում սկիզբ առավ մի նոր ժամանակաշրջան, որն հիշեցրեց աճեմյանական ոսկեդարը: Մշակելով թատրոնի ուրույն գեղարվեստական ծրագիրը` Խ. Աբրահամյանը առաջնությունը տվեց ազգային ժամանակակից թատերգությանը` խաղացանկ բերելով Պ. Զեյթունցյանի (Անավարտ մենախոսություն), Ա.Քալանթարյանի (Իրական պատմություն), Ժ. Հարությունյանի (Քո վերջին հանգրվանը), Ժ. Անանյանի (Կառուսել), պիեսները: Երեք տարվա ընթացքում բեմադրվեցին` Է.Շիմի և Գ. Մարկովի (Այսօրվա նորություններ), Ա. Չեխովի (Արջ), (Առաջարկություն), (Կարապի երգը), Ռ. Կիպլինգի (Մաուգլի), Ռ. Թոմայի (Ութ սիրագորով կանայք), Պ. Ջակոմետիի (Ոճրագործի ընտանիքը), Ն. Դումբաձեի (Մեղադրական եզրակացություն) ստեղծագործությունները: Սրանցից մի քանիսը դարձան իսկապես գլուխգործոցներ, թատրոնի ստեղծագործությանը հաղորդելով մասշտաբայնություն և ընդգծվածություն:

Եղերական 1988-ից հետո, երիտասարդ բեմադրիչ Հ. Ղազանչյանը արդեն վերանվանված Գյումրու Վ. Աճեմյանի անվան թատրոնը ղեկավարեց 1989-1994թթ-ին` ամբողջապես կազմավորելով թատերախումբը, ստեղծելով նոր խաղացանկ: Հ. Ղազանչյանի գործունեության շրջանում բեմադրվեցին` Շեքսպիրի (Սիրո ապարդյու ճիգեր), Դ. Դեմիրճյանի (Քաջ Նազար), (Սոփոկլեսի Անտիգոնե), Յուջին օ’Նիլի (Սերը ծփիների տակ), Ժ. Հարությունյանի (Մեր այս տարիքում), Ա. Կասոնայի (Երրորդ գլուխ) Ռ.Քոչարյանի (Ֆայտոն Ալեք), Լ. Շանթի (Շղթայվածը) պիեսները, Ղազանչյանի հրավերով բեմադրություններ արեցին Ե.Ղազանչյանը Ժ. Անանյանի (Թռչող ափսեից իջած մարդը), Մ. Գրիգորյանը` Լ. Շանթի (Ինկած բերդի իշխանուհին), /սա իսկապես ստեղծագործական խիզախում դարձավ թատրոնի համար, մասնավորաբար ամբողջացրեց դերասաններ Ս.Ե.Գրիգորյանի և Ռ. Թովմասյանի ստեղծագործական նկարագրերը:/ Լ. Թուխիկյանը իր իսկ հեղինակած (Կանաչ ստվեր), Վ.Ստեփանյանը` (Տերն ու Ծառան) ըստ թումանյանի համանուն հեքիաթի, Ա. Առաքելյանը` (Ոսկի Քաղաք) ըստ Թումանյանի պիեսները: Հ. Ղազանչյանի ջանքերով բացվեց Երևանի թատերական ինստիտուտի կուրս-մասնաճյուղը, որում ընդգրկվեցին թատրոնի երիտասարդ դերասաններ Հ. Հովհաննիսյանը, Ա. Հակոբյանը, Ա. Կիրակոսյանը, Գ. Խաչատրյանը, Ս. Գրիգորյանը, Լ.Թադևոսյանը, Կ. Խաչատրյանը, Ա. Բադալյանը, Լ. Մինասյանը…


1994-1998թթ-ին Վ. Աճեմյանի անվան թատրոնը ղեկավարեց կինոբեմադրիչ ՀՀ ժող. արտիստ, ՀՀ պետական մրցանակի դափնեկիր Ալբերտ Մկրտչյանը: Մոտ չորս տարի տևած իր գործունեության ընթացքում բեմադրեց չորս ներկայացում` Կ. Գոլդոնի (Երկու տիրոջ ծառան), Ա. Մկրտչյանի և Ռ. Քոչարյանի (Հավատք), Առբուզովի (Իրկուտսկյանպատմություն), իր իսկ հեղինակած (Ավերված քաղաքի ակորդը) պիեսները /որը հետագայում դարձավ (Ուրախ ավտոբուս) ֆիլմի հիմքը/ որոնք իսկապես դարձան գեղարվեստական լուրջ ձեռքբերումներ:

2000-2003թթ-ին թատրոնը ղեկավարեց ՀՀ վաստակավոր արտիստ Ա. Գամջյանը, որի օրոք ստեղծվեցին Ա. Այվազյանի (Դիպլիպիտո), Ա. Պապայանի (Գնա մեռի արի սիրեմ), Ռ. Աբրահամյանի (Գյումրվա տրնգի), Ս. Բաղդասարյանի (Գիքոր) ըստ Թումանյանի, Ռազումովսկայայի (Սիրելի Ելենա Սերգեևնա),Կոբո Աբեի (Բարեկամներ) և մի շարք այլ ներկայացումներ:
2004-ից միչ 2014-թթ. թատրոնի գեղարվեստական ղեկավարությունն ստանձնեց ՀՀ ժող. արտիստ, պրոֆեսոր Նիկոլայ Ծատուրյանը` ազգային ռոժիսուրայի երևելի դեմքերից մեկը, մի հզոր անհատականություն, ով իր առաջին իսկ բեմադրությունից թատրոնում վերահաստատեց բարձր պրոֆեսիոնալիզմը, գեղարվեստական նոր որոնումների շունչը: Այդ թվականից ի վեր թատրոնի ստեղծագործական աշխատանքներն աչքի ընկան բեղունությամբ. Ռ. Կալինովսկի (Հրեշը լուսնի վրա), Ա.Քալանթարյան (Բումերանգ), Գ. Սունդուկյան (Փուղի զորութինը), Ֆ. Դյուրենմաթ (Ավգյան ախոռներ կամ Հերակլեսի չիրագործված սխրանքը), Կ. Խոդիկյան (Ինչպես կինը փախավ տնից) /ռեժիսոր` Ն. Ծատուրյան/, Ժ. Անանյան (տաքսի-տաքսի) / ռեժիսոր`Ս. Բաղդասարյան/, Ալ. Շիրվանզադե (Չար ոգի), (Արտիստը) /ռեժիսոր` Ա. Բաղդասարյան/, Ա. Լինդգրեն (Մանչուկն ու կառլսոնը), Վ. Փափազյան (Ժայռ), Չ. Դիկկենս (Դավիթ Կոպպերֆիլդ) /ռեժիսոր`Հ. Հովհաննիսյան/, Հ. Թումանյան (Հեյ, ջան, Շաշաստան), Ն. Սանթոյան (Ինչու էսպես չարացանք), Կ. Մանիե (Փարիզը վտանգավոր քաղաք է) /ռեժիսոր`Լ. Հարությունյան/, Ա. Կասոնա (Ծառերը կանգնած են մահանում), Ն. Դումբաձե (Մեղադրական եզրակացություն) /ռեժիսոր` Ռ. Գրիգորյան/, Վ.Սարոյան (Մի քնա բարկացած), Կ. Զարյան (Արա Աստված) /ռեժիսոր` Հ. Ղազարյան/:
2014թ. Մարտից թատրոնի գլխավոր ռեժիսոր նշանակվեծ թատրոնի երիտասարդ ռեժիսոր Լյուդվիգ Հարությունյանը: Եվ այսօր էլ Գյումրու Վ. Աճեմյանի անվան պետական դրամատիկական թատրոնը նվաճում է նոր բարձունքներ, իրականացնում նոր ու հետաքրքիր նախագծեր, ներկայացումներ, որոնք մշտապես ամուր պահում են կապը հանդիսատեսի հետ և աներեր պահում թատրոնի տեղը մշակութային այս քաղաքում: Թատրոնի հնաբնակների կողքին իրենց տեղն են հաստատում երիտասարդներ, ովքեր համախմբվելով թատրոն երևույթի շուրջ, այս հնամենի թատրոնում ձևավորված ավանդույթներն ուղղորդում են դեպի ապագա:

2014թ. Մարտից թատրոնի գլխավոր ռեժիսոր նշանակվեծ թատրոնի երիտասարդ ռեժիսոր Լյուդվիգ Հարությունյանը: Եվ այսօր էլ Գյումրու Վ. Աճեմյանի անվան պետական դրամատիկական թատրոնը նվաճում է նոր բարձունքներ, իրականացնում նոր ու հետաքրքիր նախագծեր, ներկայացումներ, որոնք մշտապես ամուր պահում են կապը հանդիսատեսի հետ և աներեր պահում թատրոնի տեղը մշակութային այս քաղաքում: Թատրոնի հնաբնակների կողքին իրենց տեղն են հաստատում երիտասարդներ, ովքեր համախմբվելով թատրոն երևույթի շուրջ, այս հնամենի թատրոնում ձևավորված ավանդույթներն ուղղորդում են դեպի ապագա:</string>
</resources>
