<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/representation"
            android:icon="@drawable/events"
            android:title="@string/representation" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/scroll_icon"
            android:title="Տարեգրություն" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/contact_us_icon"
            android:title="@string/contact_us" />

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/log_out"
            android:title="@string/log_out"
            android:visible="true" />
    </group>

</menu>
